<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"/>

</menu>